<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/recovery" />
    <Preference android:title="@string/flash_recovery" android:key="flashrecovery" android:summary="@string/do_this_first" />
    <Preference android:title="@string/reboot_recovery" android:key="rebootrecovery" android:summary="@string/reboot_into_recovery" />
    <PreferenceCategory android:title="@string/rom_management" android:key="rom" />
    <Preference android:title="@string/install_rom" android:key="sdcardrom" />
    <Preference android:title="@string/download_rom" android:key="downloadrom" />
    <Preference android:title="@string/check_updates" android:key="checkupdates" />
    <Preference android:title="@string/install_from_qrcode" android:key="qrcode" android:summary="@string/qrcode_summary" />
    <PreferenceCategory android:title="@string/backup_and_restore" android:key="rom" />
    <Preference android:title="@string/manage_and_restore_backups" android:key="manage" />
    <Preference android:title="@string/backup_current_rom" android:key="backup" />
    <PreferenceCategory android:title="@string/utilities" android:key="rom" />
    <Preference android:title="@string/fix_permissions" android:key="fix_permissions" android:summary="@string/fix_permissions_detail" />
    <Preference android:title="@string/partition_sdcard" android:key="partition_sdcard" android:summary="@string/partition_sdcard_summary" />
    <PreferenceCategory android:title="@string/more_recoveries" />
    <Preference android:title="@string/flash_alternate" android:key="flash_alternate" android:summary="@string/flash_alternate_unavailable" />
    <Preference android:title="@string/flash_legacy_and_experimental" android:key="flash_legacy_and_experimental" android:summary="@string/flash_legacy_and_experimental_summary" />
</PreferenceScreen>